fixed propertyMapping to use new object